--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -110,11 +110,12 @@
     <PreferenceCategory
         android:title="@string/status_bar_brightness_category">
 
-        <lineageos.preference.LineageSecureSettingSwitchPreference
+        <lineageos.preference.LineageSecureSettingListPreference
             android:key="qs_show_brightness_slider"
             android:title="@string/status_bar_brightness_slider_title"
-            android:summary="@string/status_bar_brightness_slider_summary"
-            android:defaultValue="true" />
+            android:entries="@array/qs_brightness_slider_entries"
+            android:entryValues="@array/qs_brightness_slider_values"
+            android:defaultValue="1" />
 
         <lineageos.preference.LineageSecureSettingSwitchPreference
             android:key="qs_show_auto_brightness"
